[metadata]
name = wfj_python_logger
version = 0.1.10
author = Wong Fu Jie
author_email = Sable_021@yahoo.com.sg
description = Custom logger for python using pre-defined logging conventions. 
long_description = file: READEME.metadata
long_description_content_type = text/markdown
url = https://github.com/Sable021/python_logger
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src